# storage/api-docs/api-docs.json
@@ -13,9 +13,33 @@
                 ],
                 "summary": "Login user",
                 "operationId": "auth_login",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "email",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "example": "raul@mail.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "password123"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "Login berhasil"
                     },
                     "401": {
                         "description": "Unauthorized"
@@ -30,9 +54,43 @@
                 ],
                 "summary": "Register user",
                 "operationId": "auth_register",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "email",
+                                    "password",
+                                    "password_confirmation"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Raul Mahya"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "raul@mail.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "example": "password123"
+                                    },
+                                    "password_confirmation": {
+                                        "type": "string",
+                                        "example": "password123"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "201": {
-                        "description": "Created"
+                        "description": "Register berhasil"
                     },
                     "422": {
                         "description": "Validation error"
@@ -49,7 +107,7 @@
                 "operationId": "auth_logout",
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "Logout berhasil"
                     },
                     "401": {
                         "description": "Unauthenticated"
@@ -68,7 +126,7 @@
                     "User Profile"
                 ],
                 "summary": "Get all users",
-                "operationId": "user_get_all",
+                "operationId": "users_get_all",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -85,10 +143,35 @@
                     "User Profile"
                 ],
                 "summary": "Create user",
-                "operationId": "user_create",
+                "operationId": "users_create",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "email"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "phone": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "201": {
-                        "description": "Created"
+                        "description": "User created"
                     }
                 },
                 "security": [
@@ -104,7 +187,7 @@
                     "User Profile"
                 ],
                 "summary": "Get user by ID",
-                "operationId": "user_get_by_id",
+                "operationId": "users_get_by_id",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -124,7 +207,25 @@
                     "User Profile"
                 ],
                 "summary": "Update user",
-                "operationId": "user_update",
+                "operationId": "users_update",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "phone": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
                         "description": "Updated"
@@ -141,7 +242,7 @@
                     "User Profile"
                 ],
                 "summary": "Delete user",
-                "operationId": "user_delete",
+                "operationId": "users_delete",
                 "responses": {
                     "200": {
                         "description": "Deleted"
